--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head><meta name="bmstable" content="header.json"><title>Table</title></head><body><p>Last update: 2022-07-28</p><p><a href="./lamp.html">Lamp</a></p><img src="./image.png"></body></html>
+<html><head><title>Table</title></head><body><p>Last update: 2023-02-05</p><p><a href="./lamp.html">Lamp</a></p><img src="./image.png"></body></html>
