--- a/lamp.html
+++ b/lamp.html
@@ -42,6 +42,7 @@ span {
 </thead>
 <tbody id="table"></tbody>
 </table>
+<p id="recommend"></p>
 <script src="sql.js"></script>
 <script>
 'use strict';
@@ -117,6 +118,7 @@ const calc = (y) => {
   return (L / 100).toFixed(2);
 }
 const agg = async (cd) => {
+  const rec = [];
   for (const e in data) data[e] = [0, 0, 0];
   plays[0] = []; plays[1] = []; plays[2] = []; plays[3] = []; plays[4] = [];
   clears[0] = clears[1] = clears[2] = clears[3] = clears[4] = 0;
@@ -128,19 +130,37 @@ const agg = async (cd) => {
       const key = [Math.max(0, Math.min(65, Math.round(level))), i - 1];
       if (!(key in data)) data[key] = [0, 0, 0];
       data[key][2]++;
-      if (!(md5 in cd)) continue;
-      plays[0].push(level);
-      plays[i].push(level);
-      data[key][1]++;
+      if (md5 in cd) {
+        plays[0].push(level);
+        plays[i].push(level);
+        data[key][1]++;
+      }
       if (cd[md5] > i) {
         clears[0]++;
         clears[i]++;
         data[key][0]++;
       }
+      else if (i == 4) {
+        rec.push([md5, i, level]);
+      }
     }
   }
   draw();
-  level.textContent = `y${calc(0)} / yE${calc(1)} / yN${calc(2)} / yH${calc(3)} / yF${calc(4)}`;
+  const skill = [calc(0), calc(1), calc(2), calc(3), calc(4)];
+  level.textContent = `y${skill[0]} / yE${skill[1]} / yN${skill[2]} / yH${skill[3]} / yF${skill[4]}`;
+  for (const e of rec) {
+    e.push(Math.log(1 - Math.random()) / (1 + Math.exp((e[2] - skill[e[1]]) / 3)));
+  }
+  rec.sort((u, v) => u[3] - v[3]);
+  recommend.innerHTML = '';
+  for (let i = 0; i < 100 && i < rec.length; i++) {
+    if (i) recommend.appendChild($.createElement('br'));
+    const a = $.createElement('a');
+    a.href = `http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&bmsmd5=${rec[i][0]}`;
+    a.textContent = `(${(-rec[i][3]).toFixed(4)}) yF${rec[i][2]} ${rec[i][0]}`;
+    recommend.appendChild(a);
+  }
+  console.log(rec);
 };
 noplay.onchange = draw;
 dbFile.onchange = () => {
