--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<html><head><title>Table</title></head><body><p>Add following URLs to BeMusicSeeker</p><pre id="table"></pre><p>v4.1.1 (2023-08-19)</p><p><a href="./lamp.html">Lamp</a></p><img src="./image.png"><script>l = document.location.href.split("/").slice(0, -1).join("/"); for (const t of "ENHF") table.textContent += `${l}/y${t}/\n`;</script></body></html>
+<html>
+<head>
+<title>Table</title>
+</head>
+<body>
+<p>Add following URLs to BeMusicSeeker</p>
+<pre id="table"></pre>
+<p>v4.2.0 (2023-08-23)</p>
+<p><a href="./lamp.html">Lamp</a></p>
+<img src="./image.png">
+<script>
+l = document.location.href.split("/").slice(0, -1).join("/");
+for (const t of "ENHF") table.textContent += `${l}/y${t}/\n`;
+</script>
+</body>
+</html>
