--- a/lamp.html
+++ b/lamp.html
@@ -175,9 +175,9 @@ const agg = async (cd) => {
   for (let i = 0; i < 4; i++) for (let j = 1; j <= 4; j++) recs[[i, j]] = [];
   for (const e of rec) {
     const t = e[1] < e[3] ? skill[e[1]] - e[2] : e[2] - skill[e[1]];
-    e.push(Math.log1p(-Math.random()) * (1 + Math.exp(t / 3)));
+    e.push(Math.log(1 - Math.random()) / (1 + Math.exp(t / 3)));
   }
-  rec.sort((u, v) => v[4] - u[4]);
+  rec.sort((u, v) => u[4] - v[4]);
   for (const [x, y, _, z] of rec) {
     if (y < z) recs[[3, y]].push(x);
     else {
