--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
 <head>
-<title>Table</title>
+<title>Yune</title>
 </head>
 <body>
 <p>Add following URLs to BeMusicSeeker</p>
 <pre id="table"></pre>
-<p>v4.4.0 (2023-11-19)</p>
-<p><a href="./lamp.html">Lamp</a></p>
-<img src="./image.png">
+<p>v4.4.1 (2023-11-20)</p>
+<p><a href="lamp.html">Lamp</a></p>
+<p><a href="browse.html">Browse</a></p>
+<img src="image.png">
 <script>
 l = document.location.href.split("/").slice(0, -1).join("/");
 for (const t of "ENHF") table.textContent += `${l}/y${t}/\n`;
